--- a/styles.css
+++ b/styles.css
@@ -12,26 +12,26 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background: #87b5b5;
+  background: #888888; /* Gray */
   margin: 10px 0;
 }
 
 .colorScheme,
 .previewWrap,
 .editorWrap textarea {
-  background-color: #c0d8d8;
-  border: 1px solid #1d2f2f;
-  box-shadow: 1px 1px 10px 2px #3a5f5f;
+  background-color: #e5d9f2; /* Light purple */
+  border: 1px solid #888888; /* Gray */
+  box-shadow: 1px 1px 10px 2px #aaaaaa; /* Gray */
   border-top: none;
 }
 
 .toolbar {
   display: flex;
   align-items: center;
-  background-color: #4aa3a3;
+  background-color: #9933cc; /* Royal purple */
   padding: 0.3rem;
-  border: 1px solid #1d2f2f;
-  box-shadow: 1px 1px 10px 2px #3a5f5f;
+  border: 1px solid #888888; /* Gray */
+  box-shadow: 1px 1px 10px 2px #aaaaaa; /* Gray */
   font-family: Russo One;
   font-size: 1rem;
   color: black;
@@ -97,6 +97,7 @@ body {
     max-width: 550px;
   }
 }
+
 .maximized {
   width: 96%;
   min-height: 100vh;
@@ -130,6 +131,7 @@ body {
     width: 90vw;
   }
 }
+
 #preview {
   padding: 0 1rem;
 }
